...
                    
                    // List
                    ExpenseListView()
                }
                .padding(16)
            }
            .navigationTitle(Text("My Budget"))
            .toolbar {
                ToolbarItem(placement: .automatic) {
                    Button {
                        whichSheet = .logout
                    } label: {
                        Image(systemName: "gearshape.fill").font(.title2)
...
